--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext {
         jacocoVersion = "0.7.6.201602180812"
         springBootVersion = "1.4.0.M2"
-        springCloudVersion = "Brixton.RC2"
+        springCloudVersion = "Brixton.RELEASE"
     }
 
     repositories {
