--- a/thule-config-service/src/main/docker/Dockerfile
+++ b/thule-config-service/src/main/docker/Dockerfile
@@ -1,8 +1,8 @@
 FROM java:8-alpine
 
 ################################  Update the base image  ################################
-RUN \
-    apk add --update bash
+# su-exec to install gosu for easy step-down from root
+RUN apk add --update bash su-exec
 
 ################################  Create user  ################################
 ENV GID 1000
@@ -12,23 +12,6 @@ ENV USER app
 RUN \
     addgroup -g $GID $USER && \
     adduser -D -G $USER -s /bin/bash -u $UID $USER
-
-################################  Grab gosu for easy step-down from root  ################################
-ENV GOSU_VERSION 1.7
-RUN set -x \
-    && apk add --no-cache --virtual .gosu-deps \
-        dpkg \
-        gnupg \
-        openssl \
-    && wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture)" \
-    && wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture).asc" \
-    && export GNUPGHOME="$(mktemp -d)" \
-    && gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
-    && gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
-    && rm -r "$GNUPGHOME" /usr/local/bin/gosu.asc \
-    && chmod +x /usr/local/bin/gosu \
-    && gosu nobody true \
-    && apk del .gosu-deps
 
 ################################  Install Spring Boot App ################################
 # Add a VOLUME pointing to "/tmp" because that is where a Spring Boot application creates working directories for Tomcat by default.
