--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,7 @@ subprojects {
             dependency("com.oracle:ojdbc6:11.2.0.1.0")
             dependency("commons-lang:commons-lang:2.6")
             dependency("nl.jqno.equalsverifier:equalsverifier:2.1.3")
+            dependency("org.awaitility:awaitility:2.0.0")
             dependency("org.powermock:powermock-api-mockito:1.6.5")
             dependency("org.powermock:powermock-core:1.6.5")
             dependency("org.powermock:powermock-module-junit4:1.6.5")
@@ -189,6 +190,7 @@ project("thule-cloud") {
         compile("org.springframework.boot:spring-boot-starter-logging")
         compile("org.springframework.boot:spring-boot-starter-web")
 
+        testCompile("org.awaitility:awaitility")
         testCompile("org.powermock:powermock-api-mockito")
         testCompile("org.powermock:powermock-core")
         testCompile("org.powermock:powermock-module-junit4")
@@ -203,6 +205,7 @@ project("thule-config-service") {
         compile("org.springframework.cloud:spring-cloud-starter")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
 
+        testCompile("org.awaitility:awaitility")
         testCompile("org.powermock:powermock-api-mockito")
         testCompile("org.powermock:powermock-core")
         testCompile("org.powermock:powermock-module-junit4")
@@ -235,6 +238,7 @@ project("thule-discovery-service") {
         compile("org.springframework.cloud:spring-cloud-starter-eureka-server")
 
         testCompile("org.assertj:assertj-core") // Remove when upgraded to a spring cloud version that uses spring boot 1.4
+        testCompile("org.awaitility:awaitility")
         testCompile("org.powermock:powermock-api-mockito")
         testCompile("org.powermock:powermock-core")
         testCompile("org.powermock:powermock-module-junit4")
@@ -276,6 +280,7 @@ project("thule-people-service") {
         testCompile("com.oracle:ojdbc6")
         testCompile("mysql:mysql-connector-java")
         testCompile("nl.jqno.equalsverifier:equalsverifier")
+        testCompile("org.awaitility:awaitility")
         testCompile("org.hsqldb:hsqldb")
         testCompile("org.powermock:powermock-api-mockito")
         testCompile("org.powermock:powermock-core")
