--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext["jackson.version"] = "2.8.0" // Remove when spring hateoas has been upgraded to support jackson 2.7
     ext {
         jacocoVersion = "0.7.7.201606060606"
-        springBootVersion = "1.4.0.RC1"
+        springBootVersion = "1.4.0.RELEASE"
         springCloudVersion = "Brixton.SR3"
     }
 
