--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     // Override Spring boot versions
-    ext["assertj.version"] = "3.5.2"  // Remove when upgraded to a spring cloud version that uses spring boot 1.4
+    ext["assertj.version"] = "3.5.2"  // Remove when spring boot has caught up with thje latest assertj version
     ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with thje latest flyway version
     ext["hibernate.version"] = "5.2.2.Final"  // Remove when spring boot has caught up with thje latest hibernate version
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with thje latest hsqldb version
@@ -225,7 +225,6 @@ project("thule-admin-server") {
 
 project("thule-config-service") {
     dependencies {
-        compile("org.springframework.boot:spring-boot-actuator:1.3.7.RELEASE") // Remove when upgraded to a spring cloud version that uses spring boot 1.4
         compile("org.springframework.cloud:spring-cloud-config-server")
         compile("org.springframework.cloud:spring-cloud-starter")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
@@ -258,15 +257,6 @@ project("thule-core") {
 }
 
 project("thule-discovery-service") {
-    dependencyManagement {
-        imports {
-            // Re-import spring cloud because spring-cloud-starter-eureka-server is incompatible with the latest spring boot version.
-            // Re-importing will then use the spring boot version specified in spring-cloud-starter-eureka-server
-            // Note: With the same dependency specified multiple times in Gradle, the last one specified wins!
-            mavenBom("org.springframework.cloud:spring-cloud-starter-parent:${springCloudVersion}") // Remove when upgraded to a spring cloud version that uses spring boot 1.4
-        }
-    }
-
     dependencies {
         compile("org.springframework.cloud:spring-cloud-starter-eureka-server")
 
@@ -298,7 +288,6 @@ project("thule-people-service") {
         compile("com.h2database:h2")
         compile("org.apache.httpcomponents:httpclient")
         compile("org.hibernate:hibernate-java8")
-        compile("org.springframework.boot:spring-boot-actuator:1.3.7.RELEASE") // Remove when upgraded to a spring cloud version that uses spring boot 1.4
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-aop")
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
