--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     ext {
         jacocoVersion = "0.7.7.201606060606"
         springBootVersion = "1.4.0.RELEASE"
-        springCloudVersion = "Brixton.SR4"
+        springCloudVersion = "Brixton.SR5"
     }
 
     repositories {
@@ -101,6 +101,7 @@ subprojects {
             dependency("de.codecentric:spring-boot-admin-server-ui:1.4.1")
             dependency("nl.jqno.equalsverifier:equalsverifier:2.1.5")
             dependency("org.awaitility:awaitility:2.0.0")
+            dependency("org.jolokia:jolokia-core:1.3.4")
             dependency("org.powermock:powermock-api-mockito:1.6.5")
             dependency("org.powermock:powermock-core:1.6.5")
             dependency("org.powermock:powermock-module-junit4:1.6.5")
@@ -210,6 +211,7 @@ project("thule-admin-server") {
     dependencies {
         compile("de.codecentric:spring-boot-admin-server")
         compile("de.codecentric:spring-boot-admin-server-ui")
+        compile("org.jolokia:jolokia-core")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
 
@@ -225,6 +227,7 @@ project("thule-admin-server") {
 
 project("thule-config-service") {
     dependencies {
+        compile("org.jolokia:jolokia-core")
         compile("org.springframework.cloud:spring-cloud-config-server")
         compile("org.springframework.cloud:spring-cloud-starter")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
@@ -258,6 +261,7 @@ project("thule-core") {
 
 project("thule-discovery-service") {
     dependencies {
+        compile("org.jolokia:jolokia-core")
         compile("org.springframework.cloud:spring-cloud-starter-eureka-server")
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
@@ -283,11 +287,12 @@ project("thule-people-service") {
     dependencies {
         compile project(":thule-core")
         compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310") // Spring boot will add java8 java.util.time Jackson support when this dependency has been added
-        compile("org.flywaydb:flyway-core")
         compile("com.googlecode.log4jdbc:log4jdbc")
         compile("com.h2database:h2")
         compile("org.apache.httpcomponents:httpclient")
+        compile("org.flywaydb:flyway-core")
         compile("org.hibernate:hibernate-java8")
+        compile("org.jolokia:jolokia-core")
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-aop")
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
