Standardise spring config (application.yml) and spring cloud config (bootstrap.yml)

--- a/thule-admin-server/src/main/resources/config/bootstrap.yml
+++ b/thule-admin-server/src/main/resources/config/bootstrap.yml
@@ -1,6 +1,7 @@
 # Bootstrap
 spring:
   application:
+    # Required by the config service as the key for the config to retrieve
     name: thule-admin-server
   profiles:
     include: native
