--- a/thule-discovery-service/src/main/resources/config/bootstrap.yml
+++ b/thule-discovery-service/src/main/resources/config/bootstrap.yml
@@ -1,6 +1,7 @@
 # Bootstrap
 spring:
   application:
+    # Required by the config service as the key for the config to retrieve
     name: thule-discovery-service
   profiles:
     include: native
