--- a/thule-config-service/src/main/resources/config/bootstrap.yml
+++ b/thule-config-service/src/main/resources/config/bootstrap.yml
@@ -1,15 +1,17 @@
 # Bootstrap
 spring:
   application:
-    # Required by the config service as the key for the config to retrieve
+    # Required by the discovery service as the key to enable other services to lookup and access this service
     name: thule-configuration-service
   profiles:
+    # By default, thule-config-server will use git as a repository for all config, we will override for demo purposes to use native, i.e. classpath or filesystem
     include: native
 
 eureka:
   instance:
-    nonSecurePort: ${server.port:8761}
+    # Hostname will be the docker generated hostname by default which will not will not be accessible outside of the host itself, so use ipaddress instead
     preferIpAddress: true
   client:
     serviceUrl:
+      # Location of the discovery service to register this service
       defaultZone: http://${eureka.host:localhost}:${eureka.port:8761}/eureka/
