--- a/thule-repository-mongodb/src/main/resources/config/application.yml
+++ b/thule-repository-mongodb/src/main/resources/config/application.yml
@@ -1,3 +1,9 @@
+# Spring logging configuration
+logging:
+  level:
+    org.springframework: info
+    uk.co.serin: trace
+
 # Spring configuration
 spring:
   data:
