--- a/thule-admin-server/src/main/resources/config/application.yml
+++ b/thule-admin-server/src/main/resources/config/application.yml
@@ -1,3 +1,9 @@
+# Spring logging
+logging:
+  level:
+    org.springframework: info
+    uk.co.serin: trace
+
 # Spring server configuration
 server:
   port: 8071
