--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -11,6 +11,11 @@ eureka:
       # Location of peer discovery services to keep the registry in sync across all discovery services, in this case we only have a single node so it refers to itself
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
+# Spring actuator info configuration
+info:
+  # Will be replaced by gradle processResources task to replace with the actual build version
+  version: @version@
+
 # Spring logging
 logging:
   level:
@@ -20,3 +25,12 @@ logging:
 # Spring server configuration
 server:
   port: 8761
+
+# Spring boot configuration
+spring:
+  jackson:
+    serialization:
+      # Admin server displays the buildTime of this service which by default will be as an
+      # absolute time (i.e. a long), not particularily meaningful unless we instruct jackson to
+      # serialize it as a timestamp which is a human readable form
+      write_dates_as_timestamps: false
