--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with thje latest hsqldb version
     ext["jackson.version"] = "2.8.3" // Remove when spring hateoas has been upgraded to support jackson 2.7
     ext["mysql.version"] = "6.0.4"  // Remove when spring boot has caught up with thje latest mysql version
+    ext["spring-retry.version"] = "1.1.4.RELEASE"  // Remove when spring boot has caught up with thje latest mysql version
+
     ext {
         jacocoVersion = "0.7.7.201606060606"
         springBootVersion = "1.4.0.RELEASE"
@@ -90,8 +92,6 @@ subprojects {
     dependencyManagement {
         imports {
             mavenBom("org.springframework.cloud:spring-cloud-starter-parent:${springCloudVersion}")
-            // Use latest spring boot version to override spring boot version specified in spring-cloud-starter-parent
-            mavenBom("org.springframework.boot:spring-boot-starter-parent:${springBootVersion}")
         }
         dependencies {
             dependency("com.googlecode.log4jdbc:log4jdbc:1.2")
