--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,11 @@ buildscript {
     ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with thje latest flyway version
     ext["hibernate.version"] = "5.2.2.Final"  // Remove when spring boot has caught up with thje latest hibernate version
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with thje latest hsqldb version
-    ext["jackson.version"] = "2.8.3" // Remove when spring hateoas has been upgraded to support jackson 2.7
     ext["mysql.version"] = "6.0.4"  // Remove when spring boot has caught up with thje latest mysql version
-    ext["spring-retry.version"] = "1.1.4.RELEASE"  // Remove when spring boot has caught up with thje latest mysql version
 
     ext {
         jacocoVersion = "0.7.7.201606060606"
-        springBootVersion = "1.4.0.RELEASE"
+        springBootVersion = "1.4.1.RELEASE"
         springCloudVersion = "Camden.RC1"
     }
 
@@ -92,6 +90,8 @@ subprojects {
     dependencyManagement {
         imports {
             mavenBom("org.springframework.cloud:spring-cloud-starter-parent:${springCloudVersion}")
+            // Use latest spring boot version to override spring boot version specified in spring-cloud-starter-parent
+            mavenBom("org.springframework.boot:spring-boot-starter-parent:${springBootVersion}")
         }
         dependencies {
             dependency("com.googlecode.log4jdbc:log4jdbc:1.2")
@@ -208,6 +208,7 @@ project("thule-cloud") {
         testCompile("org.powermock:powermock-core")
         testCompile("org.powermock:powermock-module-junit4")
         testCompile("org.springframework.boot:spring-boot-starter-test")
+        testCompile("org.springframework.retry:spring-retry")
     }
 }
 
