Tidied maven repository usage

--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,9 @@ buildscript {
             url "http://pooh:8081/repository/maven-public"
         }
         mavenCentral()
-//        maven {
-//            url "http://repo.spring.io/milestone"
-//        }
+        maven {
+            url "http://repo.spring.io/milestone"
+        }
     }
 
     dependencies {
