--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     ext {
         jacocoVersion = "0.7.7.201606060606"
         springBootVersion = "1.4.1.RELEASE"
-        springCloudVersion = "Camden.RC1"
+        springCloudVersion = "Camden.RELEASE"
     }
 
     repositories {
@@ -105,7 +105,6 @@ subprojects {
             dependency("org.powermock:powermock-api-mockito:1.6.5")
             dependency("org.powermock:powermock-core:1.6.5")
             dependency("org.powermock:powermock-module-junit4:1.6.5")
-            dependency("org.springframework.cloud:spring-cloud-starter:1.1.3.RELEASE")
             dependency("org.springframework.data:spring-data-rest-hal-browser:2.6.0.M1")
         }
     }
