--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     // Override Spring boot versions
-    ext["assertj.version"] = "3.5.2"  // Remove when spring boot has caught up with thje latest assertj version
-    ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with thje latest flyway version
-    ext["hibernate.version"] = "5.2.2.Final"  // Remove when spring boot has caught up with thje latest hibernate version
-    ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with thje latest hsqldb version
-    ext["mysql.version"] = "6.0.4"  // Remove when spring boot has caught up with thje latest mysql version
+    ext["assertj.version"] = "3.5.2"  // Remove when spring boot has caught up with the latest assertj version
+    ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with the latest flyway version
+    ext["hibernate.version"] = "5.2.2.Final"  // Remove when spring boot has caught up with the latest hibernate version
+    ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest hsqldb version
+    ext["jackson.version"] = "2.8.4" // Remove when spring boot has caught up with the latest jackson version
+    ext["mysql.version"] = "6.0.4"  // Remove when spring boot has caught up with the latest mysql version
 
     ext {
         jacocoVersion = "0.7.7.201606060606"
