--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,7 @@ subprojects {
             dependency("org.powermock:powermock-api-mockito:1.6.5")
             dependency("org.powermock:powermock-core:1.6.5")
             dependency("org.powermock:powermock-module-junit4:1.6.5")
+            dependency("org.springframework.cloud:spring-cloud-starter:1.1.3.RELEASE")
             dependency("org.springframework.data:spring-data-rest-hal-browser:2.6.0.M1")
         }
     }
@@ -194,12 +195,11 @@ subprojects {
 }
 
 project("thule-cloud") {
-    tasks.itest.dependsOn(":thule-admin-server:build", ":thule-config-service:build", ":thule-discovery-service:build", ":thule-people-service:build")
+    tasks.itest.dependsOn(":thule-admin-server:build", ":thule-config-service:build", ":thule-discovery-service:build", ":thule-edge-service:build", ":thule-people-service:build")
 
     bootRepackage.enabled = false
 
     dependencies {
-        compile("org.apache.httpcomponents:httpclient")
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-logging")
         compile("org.springframework.boot:spring-boot-starter-web")
@@ -218,10 +218,13 @@ project("thule-admin-server") {
     dependencies {
         compile("de.codecentric:spring-boot-admin-server")
         compile("de.codecentric:spring-boot-admin-server-ui")
-        compile("org.jolokia:jolokia-core")
+        compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+        compile("org.springframework.boot:spring-boot-starter-actuator")
+        compile("org.springframework.boot:spring-boot-starter-aop") // Without aop, spring-retry will not work, see https://github.com/spring-projects/spring-retry/issues/52
         compile("org.springframework.boot:spring-boot-starter-logging")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
+        compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
         testCompile("org.awaitility:awaitility")
@@ -234,7 +237,8 @@ project("thule-admin-server") {
 
 project("thule-config-service") {
     dependencies {
-        compile("org.jolokia:jolokia-core")
+        compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+        compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-logging")
         compile("org.springframework.cloud:spring-cloud-config-server")
         compile("org.springframework.cloud:spring-cloud-starter")
@@ -267,9 +271,33 @@ project("thule-core") {
 
 project("thule-discovery-service") {
     dependencies {
-        compile("org.jolokia:jolokia-core")
+        compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+        compile("org.springframework.boot:spring-boot-starter-actuator")
+        compile("org.springframework.boot:spring-boot-starter-aop") // Without aop, spring-retry will not work, see https://github.com/spring-projects/spring-retry/issues/52
         compile("org.springframework.boot:spring-boot-starter-logging")
+        compile("org.springframework.cloud:spring-cloud-starter-config")
+        compile("org.springframework.cloud:spring-cloud-starter-eureka")
         compile("org.springframework.cloud:spring-cloud-starter-eureka-server")
+        compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
+
+        testCompile("nl.jqno.equalsverifier:equalsverifier")
+        testCompile("org.awaitility:awaitility")
+        testCompile("org.powermock:powermock-api-mockito")
+        testCompile("org.powermock:powermock-core")
+        testCompile("org.powermock:powermock-module-junit4")
+        testCompile("org.springframework.boot:spring-boot-starter-test")
+    }
+}
+
+project("thule-edge-service") {
+    dependencies {
+        compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+        compile("org.springframework.boot:spring-boot-starter-actuator")
+        compile("org.springframework.boot:spring-boot-starter-logging")
+        compile("org.springframework.cloud:spring-cloud-starter-config")
+        compile("org.springframework.cloud:spring-cloud-starter-eureka")
+        compile('org.springframework.cloud:spring-cloud-starter-zuul')
+        compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
         testCompile("org.awaitility:awaitility")
@@ -298,7 +326,7 @@ project("thule-people-service") {
         compile("org.apache.httpcomponents:httpclient")
         compile("org.flywaydb:flyway-core")
         compile("org.hibernate:hibernate-java8")
-        compile("org.jolokia:jolokia-core")
+        compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-aop")
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
