--- a/thule-cloud/src/main/docker/docker-compose.yml
+++ b/thule-cloud/src/main/docker/docker-compose.yml
@@ -2,15 +2,13 @@
 thule-admin-server:
   image: pooh.serin-consultancy.co.uk/thule-admin-server
   environment:
-    EUREKA_HOST: thule-discovery-service
+    CONFIG_HOST: docker-host
+    CONFIG_PORT: 8888
+    EUREKA_HOST: docker-host
     EUREKA_PORT: 8761
-    SERVER_PORT: 8071
   extra_hosts:
     - docker-host:172.17.0.1
   hostname: admin-server-1
-  links:
-    - thule-config-service
-    - thule-discovery-service
   ports:
     - "8071:8071"
   volumes:
@@ -22,13 +20,12 @@ thule-admin-server:
 thule-config-service:
   image: pooh.serin-consultancy.co.uk/thule-config-service
   environment:
-    EUREKA_HOST: thule-discovery-service
+    EUREKA_HOST: docker-host
     EUREKA_PORT: 8761
+    SERVER_PORT: 8888
   extra_hosts:
     - docker-host:172.17.0.1
   hostname: config-service-1
-  links:
-    - thule-discovery-service
   ports:
     - "8888:8888"
   volumes:
@@ -39,6 +36,9 @@ thule-config-service:
 ################################  thule-discovery-service  ################################
 thule-discovery-service:
   image: pooh.serin-consultancy.co.uk/thule-discovery-service
+  environment:
+    CONFIG_HOST: docker-host
+    CONFIG_PORT: 8888
   extra_hosts:
     - docker-host:172.17.0.1
   hostname: discovery-service-1
@@ -49,21 +49,37 @@ thule-discovery-service:
     - /etc/localtime:/etc/localtime:ro
     - /etc/timezone:/etc/timezone:ro
 
+################################  thule-edge-service  ################################
+thule-edge-service:
+  image: pooh.serin-consultancy.co.uk/thule-edge-service
+  environment:
+    CONFIG_HOST: docker-host
+    CONFIG_PORT: 8888
+    EUREKA_HOST: docker-host
+    EUREKA_PORT: 8761
+  extra_hosts:
+    - docker-host:172.17.0.1
+  hostname: edge-service-1
+  ports:
+    - "8080:8080"
+  volumes:
+    # Set localtime and timezone on container to be the same as the host
+    - /etc/localtime:/etc/localtime:ro
+    - /etc/timezone:/etc/timezone:ro
+
 ################################  thule-people-service  ################################
 thule-people-service:
   image: pooh.serin-consultancy.co.uk/thule-people-service
   environment:
-    EUREKA_HOST: thule-discovery-service
+    CONFIG_HOST: docker-host
+    CONFIG_PORT: 8888
+    EUREKA_HOST: docker-host
     EUREKA_PORT: 8761
-    SERVER_PORT: 8080
   extra_hosts:
     - docker-host:172.17.0.1
   hostname: people-service-1
-  links:
-    - thule-config-service
-    - thule-discovery-service
   ports:
-    - "8080:8080"
+    - "8090:8090"
   volumes:
     # Set localtime and timezone on container to be the same as the host
     - /etc/localtime:/etc/localtime:ro
