--- a/thule-edge-service/src/itest/resources/config/application.yml
+++ b/thule-edge-service/src/itest/resources/config/application.yml
@@ -1,8 +1,18 @@
+# Eureka configuration
+eureka:
+  instance:
+    # Hostname will be the docker generated hostname by default which will not will not be accessible outside of the host itself, so use ipaddress instead
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      # Location of the discovery service to register this service
+      defaultZone: http://${eureka.host:localhost}:${eureka.port:8761}/eureka/
+
 # Spring actuator configuration
 endpoints:
   sensitive: false
 info:
-  description: Thule Config Service
+  description: Thule Edge Service
   name: ${spring.application.name}
 
 # Spring logging
@@ -13,18 +23,17 @@ logging:
 
 # Spring server configuration
 server:
-  port: 8888
+  port: 8080
 
 # Spring boot configuration
 spring:
-  cloud:
-    config:
-      server:
-        native:
-          searchLocations: classpath:/config/{profile}
   jackson:
     serialization:
       # Admin server displays the buildTime of this service which by default will be as an
       # absolute time (i.e. a long), not particularily meaningful unless we instruct jackson to
       # serialize it as a timestamp which is a human readable form
       write_dates_as_timestamps: false
+
+# Zuul configuration
+zuul:
+  sensitiveHeaders: Cookie,Set-Cookie
