--- a/thule-edge-service/src/itest/resources/config/application.yml
+++ b/thule-edge-service/src/itest/resources/config/application.yml
@@ -36,4 +36,6 @@ spring:
 
 # Zuul configuration
 zuul:
+  # Defaults to Cookie,Set-Cookie,Authorization but means the basic authentication header will not propogate to the people service,
+  # hence Authorization has been removed from the sensitive headers
   sensitiveHeaders: Cookie,Set-Cookie
