--- a/build.gradle
+++ b/build.gradle
@@ -187,7 +187,7 @@ subprojects {
         }
     }
 
-    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutaor info
+    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
     springBoot {
         buildInfo()
     }
